# GreaperCore

./: CMakeLists.txt  CoreLnx.vcxproj  CoreWin.vcxproj  CoreWin.vcxproj.filters
Private/: Application.cpp  Application.h  CommandManager.cpp  CommandManager.h  GreaperCoreDLL.cpp  GreaperCoreDLL.h  ImplPrerequisites.h  LogManager.cpp  LogManager.h  ThreadManager.cpp  ThreadManager.h
Private/Core/: Application.cpp  Application.h  CommandManager.cpp  CommandManager.h  GreaperCoreDLL.cpp  GreaperCoreDLL.h  ImplPrerequisites.h  LogManager.cpp  LogManager.h  ThreadManager.cpp  ThreadManager.h
Public/: Concurrency.h  CorePrerequisites.h  Enumeration.h  Event.h  FileStream.h  IApplication.h  ICommandManager.h  IGreaperLibrary.h  ILogManager.h  IObjectFactory.h  IThreadManager.h  Interface.h  Library.h  MPMCTaskScheduler.h  Memory.h  PHAL.h  Platform.h  Property.h  Result.h  SlimTaskScheduler.h  Stream.h  UTF8String.h  Uuid.h
Public/Allocators/: BaseAllocator.h  BaseAllocator.inl  PoolAllocator.h  StdAllocator.h
Public/Base/: BasicTypeInfo.h  BasicTypes.h  CPUInfo.h  FileStream.inl  Formatting.inl  ICommand.h  IConsole.h  IGreaperLibrary.inl  IInterface.inl  IThread.h  LogWriterFile.h  LogWriterStdout.h  MPMCTaskScheduler.inl  MemoryStream.inl  Property.inl  SPtr.h  SlimTaskScheduler.inl  Span.h  StdUtils.inl  TypeTraits.h  Utils.h  VerifyMacros.h  WPtr.h
Public/Core/: Enumeration.h  Event.h  FileStream.h  IGreaperLibrary.h  IObject.h  Library.h  Memory.h  MemoryStream.h  PHAL.h  Platform.h  Property.h  StringUtils.h
Public/Core/Base/: CPUInfo.h  Config.h  (+15 more)
Public/Lnx/: LnxLibrary.h  LnxPlatform.h  LnxPlatform.inl  LnxThreadImpl.inl  LnxThreading.h  Prerequisites.h
Public/Reflection/: BaseType.h  ComplexType.h  IField.h  PlainType.h  Property.h
Public/Win/: Prerequisites.h  Win32Base.h  Win32Concurrency.h  Win32GDI.h  Win32PSAPI.h  Win32ShellScalingAPI.h  Win32SysInfo.h  Win32User.h  WinLibrary.h  WinPlatform.h  WinPlatform.inl  WinThreadImpl.inl  WinThreading.h
(+11 files in other folders)
